--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -1,4 +1,5 @@
 .modal {
+	z-index: 999;
 	min-height: 100vh;
 	position: fixed;
 	top: 0;
@@ -32,6 +33,7 @@
 }
 
 .modal__wrap {
+	z-index: 1000;
 	border-radius: 10px;
 	background-color: #1d3557;
 
