--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,5 +1,5 @@
-<section class="section footer">
-	<div class="container-sm">
+<footer class="section footer">
+	<div class="container-sm container-sm-footer">
 		<div class="footer__wrap">
 			<div class="footer__row footer__row-top">
 				<div class="logo logo-footer">
@@ -39,4 +39,4 @@
 			<p>© 2020 ООО <a class="footer__link" href="http://lanoptic.ru/">“Лан-Оптик”</a></p>
 		</div>
 	</div>
-</section>
+</footer>
