--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -22,10 +22,8 @@ ol li {
 
 html,
 body {
-	// font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-	// "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-	// "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 	font-family: "Montserrat", sans-serif;
+	font-weight: 400;
 	min-height: 100vh;
 	scroll-behavior: smooth;
 	color: $dark;
